@@ -351,6 +351,14 @@
 		</SCRIPT>
 		</TD>
 	</TR>
+	@if?CheckReqParm?SKILLRPT=SKILLRPT@
+		<TR><TD WIDTH=100% COLSPAN=15><FONT COLOR=WHITE>
+			Group results by:
+			<INPUT TYPE=RADIO NAME="GROUPSKILLSBY" VALUE="NAME" @if?CheckReqParm?GROUPSKILLSBY=NAME@CHECKED@endif@ @if?CheckReqParm?GROUPSKILLSBY=@CHECKED@endif@ ONCLICK="Clicked('stats.cmvp')">Name&nbsp;
+			<INPUT TYPE=RADIO NAME="GROUPSKILLSBY" VALUE="TYPE" @if?CheckReqParm?GROUPSKILLSBY=TYPE@CHECKED@endif@ ONCLICK="Clicked('stats.cmvp')">Skill Type&nbsp;
+			<INPUT TYPE=RADIO NAME="GROUPSKILLSBY" VALUE="DOMAIN" @if?CheckReqParm?GROUPSKILLSBY=DOMAIN@CHECKED@endif@ ONCLICK="Clicked('stats.cmvp')">Domain
+		</FONT></TD></TR>
+	@endif@
 	<TR><TD WIDTH=100% COLSPAN=15><BR></TD></TR>
 	<TR>
 		@if?CheckReqParm?SKILLRPT=SKILLRPT@
@@ -395,7 +403,37 @@
 		@endif@
 	</TR>
 		@if?CheckReqParm?SKILLRPT=SKILLRPT@
-			@CoffeeTableRows?HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+			@if?CheckReqParm?GROUPSKILLSBY=NAME@
+				@CoffeeTableRows?HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+			@endif@
+			@if?CheckReqParm?GROUPSKILLSBY=TYPE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Skills</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=SKILL&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Spells</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=SPELL&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Prayers</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=PRAYER&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Songs</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=SONG&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Thief Skills</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=THIEF SKILL&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Chants</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=CHANT&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Common Skills</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=COMMON SKILL&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+				<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>Languages</B></FONT></TD></TR>
+				@CoffeeTableRows?ABLETYPE=LANGUAGE&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+			@endif@
+			@if?CheckReqParm?GROUPSKILLSBY=DOMAIN@
+				@AbilityDomainNext?reset@ 
+				@loop@ 
+					@AbilityDomainNext@
+					@if?CheckReqParm?DOMAIN=NOTHING@ @else@
+						<TR><TD WIDTH=100% COLSPAN=15 ALIGN=CENTER><FONT COLOR=WHITE><B>@RequestParameter?DOMAIN@</B></FONT></TD></TR>
+						@CoffeeTableRows?ABLEDOMAIN=@@RequestParameter?DOMAIN@@&HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&COLSPAN=1&NEXTSKILLID&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE&COLSPAN=3&NEXTSKILLID&COLSPAN=1&SKILLUSE@
+					@endif@
+				@back@
+			@endif@
 		@else@
 			@if?CheckReqParm?QUESTRPT=QUESTRPT@
 				@CoffeeTableRows?HEADER=<FONT COLOR=WHITE SIZE=-1>&FOOTER=</FONT>&QUESTNAME&STARTATTEMPT&TIMESTART&FAILEDSTART&ACCEPTED&SUCCESS&FAILED&DROPPED&TIMESTOP&STOP@
@@ -412,6 +450,7 @@
 	</TD></TR></TABLE>
 	<FONT COLOR=WHITE>* This statistic always applies to all users, regardless of filter.</FONT><P>
 	</CENTER>
+</FORM>
 </BODY>
 </HTML>
 @endif@
