@@ -15,6 +15,7 @@
   14. Clerics and Druids also get planar travelling spells: Plane Walking and Planar Travel
   15. New racial ability for horse-like races: Buck
   16. Achievements command has lots of new options
+  17. The Skills Report on the Statistics MUDGrinder page can now group by name, type, domain.
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
